IMplementing file DTO